--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reminder</title>
-  <script async src="https://tally.so/widgets/embed.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto+Mono:wght@400;700&display=swap');
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #000000, #111827); /* Elegant gradient */
+      background: linear-gradient(135deg, #000000, #111827);
       color: #f9fafb;
       text-align: center;
-      padding: 80px 20px;
+      padding: 40px 20px;
       margin: 0;
     }
 
@@ -55,7 +54,6 @@
       transform: translateY(-3px) scale(1.03);
     }
 
-    /* Glow animation */
     @keyframes glow {
       0% { box-shadow: 0 0 10px rgba(37,99,235,0.6); }
       50% { box-shadow: 0 0 25px rgba(37,99,235,0.9); }
@@ -63,7 +61,7 @@
     }
 
     footer {
-      margin-top: 70px;
+      margin-top: 60px;
       font-size: 0.95rem;
       color: #6b7280;
       font-family: 'Roboto Mono', monospace;
@@ -71,7 +69,7 @@
     }
 
     footer span {
-      color: #f43f5e; /* Stylish pink heart */
+      color: #f43f5e;
     }
   </style>
 </head>
@@ -80,17 +78,13 @@
   <h1>⏰ Amrutha's Reminder App</h1>
   <p>Stay productive and never miss a task. <br> Add your reminders in just one click!</p>
 
-  <!-- Tally embed button -->
-  <button data-tally-open="meNMAE" 
-          data-tally-overlay="1" 
-          data-tally-emoji-text="✨" 
-          data-tally-emoji-animation="wave">
-    ➕ Add Reminder
-  </button>
+  <!-- Button -->
+  <button onclick="window.location.href='https://tally.so/r/3EBx2L'">➕ Add Reminder</button>
 
   <footer>Made with <span>❤️</span> by Amrutha</footer>
 </body>
 </html>
+
 
 
 
